updating index.js and css files

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <img src="images/search.png" alt="search icon">
             </button>
         </div>
+        <div class="loading">Loading...</div>
+
         <div class="error" style="display: none; color: red;">City not found. Please try again.</div>
 
         <div class="weather">
